tests/golden/type_errors/array_reduce_member_non_function.cd
[1].reduce(0, 42);
