tests/golden/type_errors/array_reduce_member_non_function.err
Type error at 1:17: reduce expects function as third argument, got number
  [1].reduce(0, 42);
                  ^
